ADD: dataset description and null analysis

--- a/notebook_exploracion.ipynb
+++ b/notebook_exploracion.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inicialización"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -108,6 +115,106 @@
     "print(df.shape) #tamaño\n",
     "df.head(5) #primeras 5 filas"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Descripción del dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como se puede ver a continuación, el dataset cuenta con 5 columnas:\n",
+    "\n",
+    "- sepal length y petal length: longitudes del pétalo y sépalo respectivamente. Son variables numéricas\n",
+    "- sepal width y petal width: anchos respectivos del pétalo y el sépalo (también numéricas)\n",
+    "- class: corresponde a la clase de flor. Es categórica de 3 categorías: Iris-setosa, Iris-versicolor e Iris-virginica"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['sepal length', 'sepal width', 'petal length', 'petal width', 'class'], dtype='object')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns = df.columns #columnas\n",
+    "columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Iris-setosa', 'Iris-versicolor', 'Iris-virginica'], dtype=object)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"class\"].unique() # valores diferentes de class (categorías)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Existencia de nulos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Como se puede ver no existen nulos en ninguna de sus columnas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sepal length: 0\n",
+      "sepal width: 0\n",
+      "petal length: 0\n",
+      "petal width: 0\n",
+      "class: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in columns:\n",
+    "    print('{:}: {:}'.format(col, len(df[df[\"petal length\"].isna()])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
