ADD: flowers type count

--- a/notebook_exploracion.ipynb
+++ b/notebook_exploracion.ipynb
@@ -334,11 +334,91 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Tipos de flor\n",
+    "Se cuentan la cantidad de filas por tipo de flor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>class</th>\n",
+       "      <th>Cantidad</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Iris-setosa</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Iris-versicolor</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Iris-virginica</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             class  Cantidad\n",
+       "0      Iris-setosa        50\n",
+       "1  Iris-versicolor        50\n",
+       "2   Iris-virginica        50"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cantidad_tipos = df.groupby(by = [\"class\"]).apply( # se puede usar la funcion agg analogamente\n",
+    "    lambda s: pd.Series({\n",
+    "        \"Cantidad\": len(s)\n",
+    "    }), include_groups=False\n",
+    ")\n",
+    "df_cantidad_tipos.reset_index(level = [\"class\"], inplace = True)\n",
+    "df_cantidad_tipos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se puede ver que hay 50 de cada tipo por lo que el dataset está perfectamente balanceado"
+   ]
   }
  ],
  "metadata": {
