--- a/notebook_exploracion.ipynb
+++ b/notebook_exploracion.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "4           5.0          3.6           1.4          0.2  Iris-setosa"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "Index(['sepal length', 'sepal width', 'petal length', 'petal width', 'class'], dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "array(['Iris-setosa', 'Iris-versicolor', 'Iris-virginica'], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
    ],
    "source": [
     "for col in columns:\n",
-    "    print('{:}: {:}'.format(col, len(df[df[\"petal length\"].isna()])))"
+    "    print('{:}: {:}'.format(col, len(df[df[col].isna()])))"
    ]
   },
   {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "2   Iris-virginica        50"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
